--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+# -- Requirements to be installed through conda --
 # torch~=1.13.1
 # torchvision~=0.14.1
-imageio==2.28.0
+# -- Requirements to be installed through pip --
+imageio==2.31.1
 lmdb~=1.4.1
 matplotlib~=3.7.1
-numpy==1.24.3
+numpy==1.25.0
 Pillow~=9.5.0
 pycocotools~=2.0.6
 scipy~=1.10.1
 yacs~=0.1.8
+click==8.1.3
